# pluginhost

./: .gitignore  README.md  pluginhost.cpp  pluginhost.h
src/: KnownPluginListScanner.h  PluginHost.cpp  PluginHost.h  PluginScan.h  PluginWindow.h  PluginWindowLookAndFeel.h
src/attachments/: PluginHostAttachment.h
src/scanner/: CMakeLists.txt  Worker.h  main.cpp
